    to the client to sort it all out
  * Client uses timestamps to determine which troves to install when their
    flavors score equally
  * Fixed build-side bug handling meta characters ([,*,etc) in file names 
  * "cvc newpkg" now accepts pkgname=label syntax
  * files.contentsChanged() function updated to work with StreamSets
  * Basic local changeset creation, retargeting, and commits work
  * The structure of the repository web interface has been redesigned
    and some authentication UI bugs have been fixed.
  * The repository web interface now requires the conary-web-common package
    to be installed.

Changes in 0.60.0:
  * Changed changesets to compress individual files instead of the combined
    stream.
  * Cleaned up file content objects to no longer track file sizes.
  * Switched away from TupleStream to StreamSet both for better performance
    and for improved flexibility in the format (at the price of larger
    frozen streams).
  * Troves explicitly provide their own names.
  * Troves can now provide "capability flags", and trove requirements
    can now include references to the capability flags.
    r.ComponentProvides(('ASDF', 'FDSA')) will cause all components built
    from the current recipe to provide the 'ASDF' and 'FDSA' capability
    flags, and r.Requires('/path/to/file', 'foo:runtime(ASDF FDSA)')
    will make /path/to/file require the foo:runtime component built
    with the ASDF and FDSA capability flags.
  * Dependency components can contain : characters now.

Changes in 0.50.14:
  * Dependency checking now returns reordering information (which isn't
    used yet)
  * Allow groups to include other groups defined in the same recipe (but
    explicitly disallow cycles in groups)
  * Fixed bug in building multiple groups with a single recipe when some
    of the groups already exist, but others don't

Changes in 0.50.13:
  * Added automatic :data component for /usr/share, to which you should